<resources>
    <string name="app_name">Agenda</string>
    <string name="create">Create Contact</string>
    <string name="list">List Contact</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="cellphone">Cellphone</string>
    <string name="save">Save</string>
    <string name="fiel_empty"> You must fill out all the field</string>
    <string name="done">Save Successfully</string>
    <string name="no_records">No Records to Show</string>
    <string name="contacts">contacts</string>
    <string name="errorname">You have not entered a Name</string>
    <string name="errorlastname">You have not entered a Last Name</string>
    <string name="errorphone">You have not typed a Phone</string>
    <string name="errorcellphone">You have not typed a Cellphone</string>

    <string-array name="Menu">
        <item>@string/create</item>
        <item>@string/list</item>
    </string-array>

</resources>
